# SchemaVision

./: .gitignore  bun.lockb  package.json  package2.json  tsconfig.json  vite.config.ts
crates/sqlite/: Cargo.toml
crates/sqlite/src/: lib.rs
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/connections/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_create_connections_table.sql
src-tauri/src/router/: mod.rs
src/components/: App.tsx  ConnectionForm.tsx  ConnectionItem.tsx  DataTable.tsx  Editor.tsx  EditorMenu.tsx  QueryItem.tsx  Sidebar.tsx  WorkspaceMenu.tsx
src/components/ui/: accordion.tsx
src/lib/: router.ts  rspc.ts
src/lib/mutations/: createConnection.ts
src/lib/queries/: getConnectionsQuery.ts
src/pages/: connection.tsx  create-connection.tsx  index.tsx
src2/: monaco-theme.json
src2/layouts/: Layout.astro
src2/pages/: index.astro
src2/pages/connections/: create.astro
src2/stores/: ClientStore.ts
