[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
sv_core = { path = "../core" }
serde_json = "1.0.107"
anyhow = "1.0.75"
async-trait = "0.1.73"
sqlite = "0.31.1"


